add: adicionando um formulario de login e testando a condição da porta da url

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -12,11 +12,14 @@
             <h3 class="f-arial">StockGestor</h3>
         </div>
         <div class="container pd-td-5">
-            <a class="f-arial" href="./login/index.html">Login</a>
+            <div class="login-container container">
+                <a class="f-arial" href="./login/index.html">Login</a>
+            </div>
         </div>
     </header>
     <footer class="container flex-center w-full">
         <p class="copy f-10 f-arial">&copy; 2025 StockGestor</p>
     </footer>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
