--- a/frontend/web/login/index.html
+++ b/frontend/web/login/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | StockGestor</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Login</h1>
+    <header class="container flex-between w-full pd-td-10">
+        <div class="brand container pd-td-10">
+            <h3 class="f-20 f-arial">StockGestor</h3>
+        </div>
+    </header>
+    <main class="container flex-center w-full">
+        <div class="login-container container flex-column">
+            <div class="login-title-container container">
+                Login
+            </div>
+            <form id="loginForm" class="login-form container flex-center flex-column form">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" />
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <button class="btn-medium">Entrar</button>
+            </form>
+        </div>
+    </main>
 </body>
 </html>
