feat: testar o link de login com a features openLink para vê se redireciona

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="container pd-td-5">
             <div class="login-container container">
-                <a class="f-arial" href="./login/index.html">Login</a>
+                <a id="loginLink" class="f-arial">Login</a>
             </div>
         </div>
     </header>
