feat: validando a feature 'openLink', criando algumas paginas para validação e criando alguns casos de uso para o usuario como exemplo.

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -12,6 +12,9 @@
             <h3 class="f-arial">StockGestor</h3>
         </div>
         <div class="container pd-td-5">
+            <div class="container">
+                <a id="dashboardLink">Dashboard</a>
+            </div>
             <div class="login-container container">
                 <a id="loginLink" class="f-arial">Login</a>
             </div>
