add: adicionando o ponto ao importar o javascript para o html, porque em produção ele precisa apontar para o arquivo que está sendo usado.

--- a/frontend/web/forgot-password/index.html
+++ b/frontend/web/forgot-password/index.html
@@ -33,6 +33,6 @@
     <footer class="container w-full pd-td-10 flex-center">
         <p class="copy">&copy; 2025 StockGestor</p>
     </footer>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
