--- a/frontend/web/register/index.html
+++ b/frontend/web/register/index.html
@@ -52,6 +52,6 @@
     <footer class="container flex-center w-full pd-td-10 b-fixed">
         <p class="copy f-10">&copy; 2025 StockGestor</p>
     </footer>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
