--- a/frontend/web/login/index.html
+++ b/frontend/web/login/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | StockGestor</title>
+    <base "/" />
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
