--- a/frontend/web/login/index.html
+++ b/frontend/web/login/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login | StockGestor</title>
-    <base "/" />
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -42,6 +41,6 @@
             </div>
         </div>
     </main>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="login.js"></script>
 </body>
 </html>
