--- a/frontend/web/login/index.html
+++ b/frontend/web/login/index.html
@@ -15,12 +15,12 @@
             <a class="f-arial" id="homeLink">Pagina Inicial</a>
         </div>
     </header>
-    <main class="container flex-center w-full">
+    <main class="container flex-center w-full h-80">
         <div class="login-container container flex-column">
-            <div class="login-title-container container">
+            <div class="login-title-container container mg-l-20">
                 Login
             </div>
-            <form id="loginForm" class="form container flex-center flex-column form">
+            <form id="submit" class="form container flex-center flex-column form">
                 <div class="form-group container flex-column">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" />
@@ -41,6 +41,9 @@
             </div>
         </div>
     </main>
+    <footer class="container w-full flex-center pd-td-10 b-fixed">
+        <p class="copy f-10">&copy; 2025 StockGestor</p>
+    </footer>
     <script type="module" src="index.js"></script>
 </body>
 </html>
